Revision history for Image::Scale

0.12
        - Correctly find libjpeg-turbo on Linux systems where some headers are installed
          in /usr/include/x86_64-linux-gnu

0.11    2015-10-07
        - Added $img->resized_height() and $img->resized_width() accessors that
          return the post-resize dimensions of the image. This can be useful if you 
          only specified one dimension and need to know the other dimension that 
          was calculated by the module. (RT #80269)
        - Changed ARM fixed_mul assembly code to not round the result, in order to
          match the output from x86 and C versions and pass the tests. (RT #93417)
        - Fixed GIF compilation when using giflib >= 5.0. (RT #106749)
        - Compilation fixes for newer OSX versions.
        - Point at new GitHub repo.

0.10    2015-08-23
        - GIF support now requires giflib >= 4.2.0, due to API changes.
          libungif is no longer supported. (RT #101679)
        - Fixed call to png_memcpy no longer working (RT #89927)

0.09    (unreleased)
        - Bug 17573, fixed several places where we could divide by 0.
        - Fixed JPEG version detection for libjpeg-turbo.
        - Fixed GIF library detection when using only --with-gif-includes switch.

0.08    2011-08-24
        - Forgot to add some new test files to the manifest.
        - Updated the Makefile and Win32 instructions to use libjpeg-turbo-1.1.1.

0.07    2011-08-24
        - Protect against resizing to a 0-width or 0-height image.
        - Use libungif if giflib is not found. (Max Soulé)
        - Fix build issue when building a non-x86 version using libjpeg-turbo's
          header file.
        - Hide orientation warning when EXIF orientation value is 0 (invalid but
          common for some reason).

0.06    2010-09-20 18:40:00
        - JPEG: Don't abort on fatal read errors if we have already processed
          some lines from the image. An image with blank space is better than